# ai-gm.ai-master

./: .env.example  .gitignore  CLAUDE.md  Elliot's AI-GM Questions - Query result.csv  PAUL.md  PRJ93_Build_Report_Current.md  PRJ93_ChangePoint_A13_Report.md  PRJ93_Live_Ingest_Report.md  PRJ93_Phase2_Build_Report.md  PRJ93_Phase2_Remediation_Report.md  PRJ93_PointDeviation_Report.md  PRJ93_Proactive_Briefing_Report.md  PRJ93_Promote_And_Serve_Report.md  biome.json  competitive-landscape.md  feature-suggestions-gm-ai-2026-05-18.md  opening_and_closing_checklist.md  package-lock.json  package.json  seed.sql  turbo.json
brain/: .gitignore  FLAGS.md  README.md  config.py  pyproject.toml  requirements-optional.txt  requirements.txt
brain/conformal/: conformal_L1.md  conformal_L1_beer_hall.md  conformal_L1_ellel.md  conformal_L1_two_river_taps.md  wrap.py
brain/data/: opening_and_closing_checklist.md
brain/eval/: change_point_eval.md  change_point_eval.py  deviation_eval.md  eval_design.md  harness.py
brain/features/: build_features.py
brain/hierarchy/: reconcile.py  reconciliation_forecast.md
brain/ingest/: calendar_sources.py  exog_weather.py  live.py  local_events.py  normalise.py  refresh.py  spike_days.py  stock_normalise.py
brain/models/: ladder.py  ladder_results_L1.md  ladder_results_L1_beer_hall.md  ladder_results_L1_ellel.md  ladder_results_L1_two_river_taps.md
brain/scripts/: run_all_venues.sh
brain/service/: app.py
brain/signals/: briefing.md  briefing.py  change_point.md  change_point.py  chatlog_kb_gap.md  chatlog_kb_gap.py  deviation.py  (+9 more)
(+710 files in other folders)
